# news-query-nexis

./: .gitignore  README.md  pyproject.toml
claude_word_qa/: __init__.py  anthropic_client.py  cli.py  doc_parser.py
data/: DLC Covid Issues.docx  Files(50).docx
test_data/: DLC x3 in Miami Herald.DOCX  News Dump 1 - Briceno.DOCX
